--- a/index.html
+++ b/index.html
@@ -65,23 +65,23 @@
               </div>
               <div class="about__slider-item">
                 <a href="#" class="about__slider-link">Свадебная съемка</a>
-                <img src="img/2.png" alt="Свадебная съемка" class="about__slider-img">
+                <img src="img/23.jpg" alt="Свадебная съемка" class="about__slider-img">
               </div>
               <div class="about__slider-item">
                 <a href="#" class="about__slider-link">Love story съемка</a>
-                <img src="img/3.png" alt="Love story съемка" class="about__slider-img">
+                <img src="img/24.jpg" alt="Love story съемка" class="about__slider-img">
               </div>
               <div class="about__slider-item">
                 <a href="#" class="about__slider-link">Семейная съемка</a>
-                <img src="img/4.png" alt="Семейная съемка" class="about__slider-img">
+                <img src="img/25.jpg" alt="Семейная съемка" class="about__slider-img">
               </div>
               <div class="about__slider-item">
                 <a href="#" class="about__slider-link">Бизнес съемка</a>
-                <img src="img/3.png" alt="Бизнес съемка" class="about__slider-img">
+                <img src="img/26.jpg" alt="Бизнес съемка" class="about__slider-img">
               </div>
               <div class="about__slider-item">
                 <a href="#" class="about__slider-link">Модельная съемка</a>
-                <img src="img/4.png" alt="Модельная съемка" class="about__slider-img">
+                <img src="img/27.jpeg" alt="Модельная съемка" class="about__slider-img">
               </div>
             </div>
           </div>
@@ -117,11 +117,12 @@
   <div class="portfolio__content">
     <div class="portfolio__info">
       <h2 class="section__title title">Портфолио</h2>
-      <p class="portfolio__text text">Большинство людей при выборе фотографа ориентируются на его портфолио.  Именно на основании портфолио фотографа судят об его опыте и профессионализме, поскольку это «визитка автора». С помощью него заказчик должен понять стиль фотографа и определиться с тем, насколько он соответствует его собственному видению. Таким образом, портфолио решает сразу несколько серьезных задач: оно создает визуальный ряд работ, а также привлекает внимание зрителей.</p>
+      <p class="portfolio__text text">Большинство людей при выборе фотографа ориентируются на его портфолио.  Именно на основании портфолио фотографа судят об его опыте и профессионализме, поскольку это «визитка автора». С помощью него заказчик должен понять стиль фотографа и определиться с тем, насколько он соответствует его собственному видению.</p>
       <p class="portfolio__text text">Здесь я представляю вашему вниманию свое портфолио. Рассматривайте его как витрину моего творческого вкуса, технического умения и человеческих качеств, проявляемых в фотографиях,возможно вы найдете их отголоски в собственном мировозрении — именно в этом и кроется секрет верного выбора фотографа для своей фотоистории!</p>
     </div>
-    <div class="portfolio__album">
-      <div class="portfolio__album-part element-animation">
+    <div class="portfolio__album element-animation">
+      <div class="portfolio__album-content">
+        <div class="portfolio__album-part">
         <div class="portfolio__album-column ">
           <div class="portfolio__album-item">
             <img src="img/5.png" alt="Туристическое снаряжение" class="portfolio__img">
@@ -148,8 +149,8 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="portfolio__album-part element-animation">
+        </div>
+        <div class="portfolio__album-part">
         <div class="portfolio__album-row">
           <div class="portfolio__album-item">
             <img src="img/6.png" alt="портрет мужской" class="portfolio__img">
@@ -216,7 +217,9 @@
         </div>
       </div>
   </div>
-    </div>
+        </div>
+      </div>
+      <a href="" class="btn portfolio__album-btn">Больше работ</a>
     </div>
   </div>
   </section>
