--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="portfolio__info">
       <h2 class="section__title title">Портфолио</h2>
       <p class="portfolio__text text">Большинство людей при выборе фотографа ориентируются на его портфолио.  Именно на основании портфолио фотографа судят об его опыте и профессионализме, поскольку это «визитка автора». С помощью него заказчик должен понять стиль фотографа и определиться с тем, насколько он соответствует его собственному видению.</p>
-      <p class="portfolio__text text">Здесь я представляю вашему вниманию свое портфолио. Рассматривайте его как витрину моего творческого вкуса, технического умения и человеческих качеств, проявляемых в фотографиях,возможно вы найдете их отголоски в собственном мировозрении — именно в этом и кроется секрет верного выбора фотографа для своей фотоистории!</p>
+      <p class="portfolio__text text">Здесь я представляю вашему вниманию свое портфолио. Рассматривайте его как витрину моего творческого вкуса, технического умения и человеческих качеств, проявляемых в фотографиях, возможно вы найдете их отголоски в собственном мировозрении — именно в этом и кроется секрет верного выбора фотографа для своей фотоистории!</p>
     </div>
     <div class="portfolio__album element-animation">
       <div class="portfolio__album-content">
@@ -232,10 +232,10 @@
           <img src="img/12.png" alt="Велосипед" class="blog__img">
         </div>
         <div class="blog__post-info">
-          <a href="" class="blog__post-title">Design is the method of putting form and content together .</a>
+          <a href="" class="blog__post-title">Практические навыки профессионального фотографа</a>
           <a href="#" class="blog__post-category">Life style - </a>
-          <a href="#" class="blog__post-date">27 июля 2020</a>
-          <p class="blog__post-text text">Sed ut perspiciatis unde omnis iste natus error sit lao hoksi voluptatem lios mukatu accusantium doloremq doisa nojilaudan tium, totam rem aperiam, uni eaque ipsa quae ab cok illo inven tore siva.</p>
+          <a href="#" class="blog__post-date">10 марта 2020</a>
+          <p class="blog__post-text text">Теоретические знания, которые должен освоить профессиональный фотограф состоят из четырех блоков – технические настройки оборудования, светотеневой рисунок, обработка фотографий и работа с выразительными инструментами.</p>
           <a href="" class="blog__post-btn">Далее...</a>
         </div>
       </div>
@@ -244,10 +244,10 @@
           <img src="img/13.png" alt="девушка на пляже" class="blog__img">
         </div>
         <div class="blog__post-info">
-          <a href="" class="blog__post-title">Design is the method of putting form and content together .</a>
+          <a href="" class="blog__post-title">Удачные идеи для фотосессии летом</a>
           <a href="#" class="blog__post-category">Life style - </a>
-          <a href="#" class="blog__post-date">27 июля 2020</a>
-          <p class="blog__post-text text">Sed ut perspiciatis unde omnis iste natus error sit lao hoksi voluptatem lios mukatu accusantium doloremq doisa nojilaudan tium, totam rem aperiam, uni eaque ipsa quae ab cok illo inven tore siva.</p>
+          <a href="#" class="blog__post-date">03 июня 2020</a>
+          <p class="blog__post-text text">Лето это чудесное время года для проведения фотосессий. Любой профессиональный фотограф скажет, что эта пора открывает огромное количество возможностей для съемки и дает возможность получить яркие эффектные кадры.</p>
           <a href="" class="blog__post-btn">Далее...</a>
         </div>
       </div>
@@ -256,10 +256,10 @@
           <img src="img/14.png" alt="Молодожены" class="blog__img">
         </div>
         <div class="blog__post-info">
-          <a href="" class="blog__post-title">Design is the method of putting form and content together .</a>
-          <a href="#" class="blog__post-category">Life style - </a>
-          <a href="#" class="blog__post-date">27 июля 2020</a>
-          <p class="blog__post-text text">Sed ut perspiciatis unde omnis iste natus error sit lao hoksi voluptatem lios mukatu accusantium doloremq doisa nojilaudan tium, totam rem aperiam, uni eaque ipsa quae ab cok illo inven tore siva.</p>
+          <a href="" class="blog__post-title">Свадебная фотосессия: полезные советы!</a>
+          <a href="#" class="blog__post-category">Wedding - </a>
+          <a href="#" class="blog__post-date">17 июля 2020</a>
+          <p class="blog__post-text text">Какими будут Ваши свадебные фотографии, зависит от командной работы фотографа и молодожен. Помните, как бы ни была красива свадьба, именно фотографии навсегда сохранят все важные моменты Вашего свадебного дня!</p>
           <a href="" class="blog__post-btn">Далее...</a>
         </div>
       </div>
