--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           <img src="img/12.png" alt="Велосипед" class="blog__img">
         </div>
         <div class="blog__post-info">
-          <a href="" class="blog__post-title">Практические навыки профессионального фотографа</a>
+          <a href="" class="blog__post-title">Навыки профессионального фотографа</a>
           <a href="#" class="blog__post-category">Life style - </a>
           <a href="#" class="blog__post-date">10 марта 2020</a>
           <p class="blog__post-text text">Теоретические знания, которые должен освоить профессиональный фотограф состоят из четырех блоков – технические настройки оборудования, светотеневой рисунок, обработка фотографий и работа с выразительными инструментами.</p>
