--- a/index.html
+++ b/index.html
@@ -275,18 +275,17 @@
     </form>
   </section>
 <footer class="footer">
-  <div class="container"></div>
+  <div class="footer__content container">
+      <a href="#home" class="footer__logo"><img src="img/logo/logo.png" alt="Logo"></a>
+      <a href="tel:+7285544717" class="footer__link"><i class="footer__icon fas fa-mobile-alt"></i>+7285544717</a>
+      <a href="mailto:a.astafieva@gmail.com" class="footer__link"><i class="footer__icon far fa-envelope"></i>a.astafieva@gmail.com</a>
+  </div>
   <div class="copyright">
-    <span class="copyright__text"></span>
+    <span class="copyright__text">All Rights @ 2017 A. Astaf'eva</span>
   </div>
 </footer>
 
-<div class="social element-animation">
-  <a href="" class="social__link" target="_blank"><i class="social__icon fab fa-facebook-f"></i></a>
-  <a href="" class="social__link" target="_blank"><i class="social__icon fab fa-instagram"></i></a>
-  <a href="#" class="social__link"><i class="social__icon fab fa-youtube"></i></a>
-  <a href="#" class="social__link"><i class="social__icon fab fa-google"></i></a>
-</div>
+
 
 <script src="https://kit.fontawesome.com/1be1ebd693.js" crossorigin="anonymous"></script>
 
