--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
   <section class="feedback section">
     <h2 class="section__title title">Оставь заявку или предложение</h2>
     <form action="#" class="feedback__form">
-      <input type="text" class="feedback__form-input" placeholder="*Your name">
-      <input type="email" class="feedback__form-input" placeholder="*Your Email">
-      <textarea name="message" class="feedback__form-textarea">Your Massages</textarea>
+      <input type="text" class="feedback__form-input" placeholder="Имя">
+      <input type="email" class="feedback__form-input" placeholder="Эл.почта">
+      <textarea name="message" class="feedback__form-textarea">Сообщение</textarea>
       <input type="submit" class="feedback__form-btn btn" value="Отправить">
     </form>
   </section>
