--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
   </section>
   <section class="feedback section">
     <h2 class="section__title title">Оставь заявку или предложение</h2>
-    <form action="#" class="feedback__form">
+    <form action="#" class="feedback__form element-animation">
       <input type="text" class="feedback__form-input" placeholder="Имя">
       <input type="email" class="feedback__form-input" placeholder="Эл.почта">
       <textarea name="message" class="feedback__form-textarea">Сообщение</textarea>
@@ -284,7 +284,6 @@
     <span class="copyright__text">All Rights @ 2017 A. Astaf'eva</span>
   </div>
 </footer>
-
 
 
 <script src="https://kit.fontawesome.com/1be1ebd693.js" crossorigin="anonymous"></script>
