--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="portfolio__album-item">
             <img src="img/5.png" alt="Туристическое снаряжение" class="portfolio__img">
             <div class="portfolio__item-nav">
-            <a href="#" class="popup__link"><img src="img/plus.png" alt="открыть фото"></a>
+            <a href="#" class="popup__link"><i class="portfolio__item-link fas fa-search-plus"></i></a>
             <div class="portfolio__item-links">
               <a href="#" class="portfolio__item-link"><i class="fas fa-share-alt"></i></a>
               <a href="#" class="portfolio__item-link"><i class="fab fa-facebook-f"></i></i></a>
@@ -139,7 +139,7 @@
           <div class="portfolio__album-item">
             <img src="img/10.png" alt="Молодожены" class="portfolio__img">
             <div class="portfolio__item-nav">
-            <a href="#" class="popup__link"><img src="img/plus.png" alt="открыть фото"></a>
+              <a href="#" class="popup__link"><i class="portfolio__item-link fas fa-search-plus"></i></a>
             <div class="portfolio__item-links">
               <a href="#" class="portfolio__item-link"><i class="fas fa-share-alt"></i></a>
               <a href="#" class="portfolio__item-link"><i class="fab fa-facebook-f"></i></i></a>
@@ -155,7 +155,7 @@
           <div class="portfolio__album-item">
             <img src="img/6.png" alt="портрет мужской" class="portfolio__img">
             <div class="portfolio__item-nav">
-            <a href="#" class="popup__link"><img src="img/plus.png" alt="открыть фото"></a>
+              <a href="#" class="popup__link"><i class="portfolio__item-link fas fa-search-plus"></i></a>
             <div class="portfolio__item-links">
               <a href="#" class="portfolio__item-link"><i class="fas fa-share-alt"></i></a>
               <a href="#" class="portfolio__item-link"><i class="fab fa-facebook-f"></i></i></a>
@@ -167,7 +167,7 @@
           <div class="portfolio__album-item">
             <img src="img/7.png" alt="портрет девушки" class="portfolio__img">
             <div class="portfolio__item-nav">
-            <a href="#" class="popup__link"><img src="img/plus.png" alt="открыть фото"></a>
+              <a href="#" class="popup__link"><i class="portfolio__item-link fas fa-search-plus"></i></a>
             <div class="portfolio__item-links">
               <a href="#" class="portfolio__item-link"><i class="fas fa-share-alt"></i></a>
               <a href="#" class="portfolio__item-link"><i class="fab fa-facebook-f"></i></i></a>
@@ -181,7 +181,7 @@
         <div class="portfolio__album-item">
           <img src="img/8.png" alt="скрипачка" class="portfolio__img">
           <div class="portfolio__item-nav">
-          <a href="#" class="popup__link"><img src="img/plus.png" alt="открыть фото"></a>
+            <a href="#" class="popup__link"><i class="portfolio__item-link fas fa-search-plus"></i></a>
           <div class="portfolio__item-links">
             <a href="#" class="portfolio__item-link"><i class="fas fa-share-alt"></i></a>
             <a href="#" class="portfolio__item-link"><i class="fab fa-facebook-f"></i></i></a>
@@ -193,7 +193,7 @@
         <div class="portfolio__album-item">
           <img src="img/9.png" alt="портрет девушки" class="portfolio__img">
           <div class="portfolio__item-nav">
-          <a href="#" class="popup__link"><img src="img/plus.png" alt="открыть фото"></a>
+            <a href="#" class="popup__link"><i class="portfolio__item-link fas fa-search-plus"></i></a>
           <div class="portfolio__item-links">
             <a href="#" class="portfolio__item-link"><i class="fas fa-share-alt"></i></a>
             <a href="#" class="portfolio__item-link"><i class="fab fa-facebook-f"></i></i></a>
@@ -207,7 +207,7 @@
       <div class="portfolio__album-item">
         <img src="img/11.png" alt="Девочка" class="portfolio__img">
         <div class="portfolio__item-nav">
-        <a href="#" class="popup__link"><img src="img/plus.png" alt="открыть фото"></a>
+          <a href="#" class="popup__link"><i class="portfolio__item-link fas fa-search-plus"></i></a>
         <div class="portfolio__item-links">
           <a href="#" class="portfolio__item-link"><i class="fas fa-share-alt"></i></a>
           <a href="#" class="portfolio__item-link"><i class="fab fa-facebook-f"></i></i></a>
@@ -274,7 +274,7 @@
       <input type="submit" class="feedback__form-btn btn" value="Отправить">
     </form>
   </section>
-<footer class="footer">
+<footer class="footer" id="contact">
   <div class="footer__content container">
       <a href="#home" class="footer__logo"><img src="img/logo/logo.png" alt="Logo"></a>
       <a href="tel:+7285544717" class="footer__link"><i class="footer__icon fas fa-mobile-alt"></i>+7285544717</a>
